--- a/lazy_ilya/myauth/templates/myauth/base.html
+++ b/lazy_ilya/myauth/templates/myauth/base.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" crossorigin href="{% static 'css/base.css' %}">
     {% endif %}
 </head>
-<body class="bg-background dark:bg-background-dark transition-all duration-300 font-base">
+<body class="min-w-sm bg-background dark:bg-background-dark transition-all duration-300 font-base">
 {% block body %}
     Base Body
 {% endblock %}
