--- a/lazy_ilya/myauth/templates/myauth/login.html
+++ b/lazy_ilya/myauth/templates/myauth/login.html
@@ -4,7 +4,7 @@
     Вход
 {% endblock %}
 {% block body %}
-    <main class="container mx-auto flex justify-center items-center min-h-screen min-w-sm py-6">
+    <main class="mx-auto flex justify-center items-center min-h-screen py-6">
         <form method="POST" action="{% url 'myauth:login' %}"
               class="relative form-style opacity-0 animate-fade-in">
             {% csrf_token %}
