--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="pt-[5%]">
-        <div class="md:w-full w-sm md:max-w-[75%] space-y-5 mx-auto">
+        <div class="md:w-full w-xs md:max-w-[75%] space-y-5 mx-auto">
             <h2 class="text-center">Поиск по городам</h2>
             <p id="counter" class="w-sm mx-auto mt-5 text-center text-text dark:text-text-dark opacity-0">Найдено
                 совпадений</p>
@@ -76,7 +76,7 @@
         <div class="relative bg-background dark:bg-background-dark rounded-xl max-w-2xl min-w-sm w-full z-10">
 
 
-            <form class="form-style !max-w-2xl">
+            <form class="relative form-style !max-w-2xl z-10">
                 {% csrf_token %}
                 <div>
                     <label for="modal-location" class="block mb-2 correct_label">Адрес</label>
