--- a/lazy_ilya/cities/templates/cities/cities.html
+++ b/lazy_ilya/cities/templates/cities/cities.html
@@ -73,7 +73,7 @@
         <!-- Размытие фона -->
         <div class="absolute inset-0 bg-background/80 dark:bg-background-dark/80 backdrop-blur-sm"></div>
         <!-- Форма (не размытая) -->
-        <div class="relative bg-background dark:bg-background-dark rounded-xl max-w-2xl min-w-sm w-full z-10">
+        <div class="relative bg-background dark:bg-background-dark rounded-xl max-w-2xl min-w-xs w-full z-10">
 
 
             <form class="relative form-style !max-w-2xl z-10">
