--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -439,15 +439,13 @@ p {
     hover:scale-105 transition-all duration-500;
 }
 
-
 .note-card {
-    @apply absolute flex flex-col p-4 rounded-xl shadow-md cursor-text
-    select-text w-full max-w-[350px]  max-h-[1000px] duration-500 overflow-y-auto
-    transition-shadow outline-none resize min-h-[200px] scale-50 md:scale-75 xl:scale-100 transition-transform;
-    /*transform: rotate(calc(-2deg + 4deg * var(--random)));*/
-    /*--random: 0;*/
-    /*overflow: auto;*/
+  @apply relative flex flex-col p-4 rounded-xl shadow-md cursor-text
+  select-text max-h-[1000px] duration-500 overflow-y-auto
+  transition-shadow outline-none resize both min-h-[200px]
+  min-w-[180px] max-w-full w-auto;
 }
+
 
 .add-button {
     @apply fixed bottom-6 right-6 bg-background dark:bg-background-dark
