--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -441,7 +441,7 @@ p {
 
 .note-card {
   @apply relative flex flex-col p-4 rounded-xl shadow-md cursor-text
-  select-text max-h-[1000px] duration-500 overflow-y-auto
+  select-text max-h-[1000px] duration-500 overflow-auto
   transition-shadow outline-none resize min-h-[200px]
   min-w-[180px] max-w-full w-auto;
 }
