--- a/lazy_ilya/frontend/src/css/base.css
+++ b/lazy_ilya/frontend/src/css/base.css
@@ -89,7 +89,7 @@ h2 {
 }
 
 h3 {
-    @apply text-sm md:text-lg xl:text-xl  font-semibold;
+    @apply text-text dark:text-text-dark text-sm md:text-lg xl:text-xl  font-semibold;
 }
 
 p {
@@ -449,10 +449,12 @@ p {
 .dropdown {
     @apply absolute z-50 bg-form-color dark:bg-form-color-dark opacity-92 rounded-xl shadow transition-all duration-200 origin-top;
 }
-.dropdown div{
+
+.dropdown div {
     @apply px-2 py-1 hover:bg-accent hover:dark:bg-accent-dark rounded-xl text-text dark:text-text-dark cursor-pointer;
 }
-.content-area{
+
+.content-area {
     @apply flex-1 outline-none max-h-[1000px] overflow-y-auto;
 }
 
@@ -472,22 +474,18 @@ p {
 }
 
 
-.note-card.dragging {
-    @apply opacity-70 shadow-xl shadow-primary dark:shadow-primary-dark cursor-grabbing;
-}
-
 .delete-btn {
     @apply absolute top-1 right-2 text-lg text-gray-700 hover:text-red-600 font-bold bg-transparent border-none cursor-pointer ;
     line-height: 1;
     user-select: none;
 }
 
-.task-card {
-    @apply max-h-[250px] overflow-y-auto;
-}
-
 .author-btn {
     @apply bg-accent text-text text-sm font-medium mr-3 px-4 py-0.5 rounded-sm dark:bg-accent-dark dark:text-text-dark cursor-pointer
+}
+
+.task-card {
+    @apply bg-surface dark:bg-surface-dark p-4 rounded-xl shadow relative cursor-pointer border-l-10;
 }
 
 
