--- a/lazy_ilya/stickers/templates/stickers/stickers.html
+++ b/lazy_ilya/stickers/templates/stickers/stickers.html
@@ -97,10 +97,7 @@
                         <option value="">-- Выберите исполнителя --</option>
 
                     </select>
-
-{#                    <input type="text" name="tags" placeholder="Теги (через запятую)"#}
-{#                           class="correct_input"/>#}
-                    <select name="tags" id="tags-select" class="correct_input" multiple placeholder="Выберитеввв или введите теги..."></select>
+                    <select id="tags-select" name="tags" multiple ></select>
 
 
                     <label class="correct_label">
